fix: collapse support miniplugin (#1446)

--- a/src/Collapse/index.less
+++ b/src/Collapse/index.less
@@ -43,22 +43,6 @@
       color: @collapse-title-icon-color;
     }
 
-    &-icon {
-      width: 44 * @rpx;
-      height: 44 * @rpx;
-      overflow: hidden;
-      margin-right: 24 * @rpx;
-
-      .ant-icon {
-        font-size: 40 * @rpx;
-      }
-
-      & image {
-        width: 44 * @rpx;
-        height: 44 * @rpx;
-      }
-    }
-
     &:active {
       background-color: @collapse-border-color;
       transition: 0s;
